--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,28 @@ body{
     padding:20px;
     margin: 10px;
     background-color:gray;
+    border-radius: 20px;
 }
 
 .assignment img{
     width: 200px;
-    padding-right:10px;
+    border: 2px solid gray;
+    margin-right: 18px;
+    border-radius: 10px;;
+}
+
+.assignment img:hover{
+    border: 2px solid darkred;
 }
 
 h1{
     color:darkgray;
     text-align: center;
+}
+a{
+     text-decoration: none;
+     color:lightcoral;
+}
+a:hover{
+     color:darkviolet;
 }
