--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,14 @@ body{
     background-color:darkred;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.assignments{
+    display: flex;
+    flex-wrap:wrap;
+}
+
 .assignment{
-    display:flex;
+    width:29.3%;
     padding:20px;
     margin: 10px;
     background-color:gray;
@@ -15,6 +21,8 @@ body{
     border: 2px solid gray;
     margin-right: 18px;
     border-radius: 10px;;
+    display: block;
+    margin:auto;
 }
 
 .assignment img:hover{
